<resources>
    <string name="app_name">Appetite</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_categories">Categories</string>
    <string name="drawer_item_how_to">How To</string>
    <string name="drawer_item_shopping_list">Shopping List</string>
    <string name="drawer_item_favourite">Favourites</string>
    <string name="drawer_sub_header">Others</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="action_search">Search</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="title_activity_sign_in">Sign-in</string>
    <string name="button_text_sign_in">SIGN IN</string>
    <string name="button_text_sign_out">SIGN OUT</string>
    <string name="servings_picker_done">done</string>
    <string name="fragment_recipeingredients_dialog_title">Servings</string>
    <string name="fragment_recipeingredients_snackbar_message">Added to shopping list!</string>
    <string name="fragment_recipeingredients_snackbar_action">view</string>
    <string name="fragment_demo_instruction_overview_header">Overview</string>
    <string name="fragment_demo_instruction_description_header">Sample App Features</string>
    <string name="feature_sign_in_title">User Sign-in</string>
    <string name="feature_sign_in_subtitle">Let your users sign in with public identity providers or your own identity system.</string>
    <string name="feature_sign_in_overview">Whether your users sign in or not, the User sign-in feature configures Amazon Cognito to uniquely identify the user and provide your app the appropriate credentials to access your AWS resources.</string>
    <string name="feature_sign_in_description">The Sample App demonstrates assignment of a unique identifier for the user, the Amazon Cognito User ID. If optional or mandatory User Sign-in has been enabled in your project, then the Sample App also includes a sign-in screen, with a button for each configured sign-in provider.</string>
    <string name="feature_sign_in_powered_by">Powered by Amazon Cognito</string>
    <string name="feature_sign_in_demo_button">Demo User Identity</string>
    <string name="main_nav_menu_item_identity_demo">User Identity</string>
    <string name="main_fragment_title_user_identity">User Identity</string>
    <string name="main_fragment_subtitle_user_identity">Keep track of users</string>
    <string name="identity_demo_text_view_description">Displays the user identity.</string>
    <string name="unknown_user">Guest User</string>
    <string name="user_id">USER IDENTIFIER</string>
    <string name="identity_demo_textview_username_description">User\'s name</string>
    <string name="identity_demo_textview_userid_description">User\'s unique identifier</string>
    <string name="identity_demo_unknown_identity_text">&lt;UNKNOWN IDENTITY&gt;</string>
    <string name="identity_demo_dialog_dismiss_text">DISMISS</string>
    <string name="identity_demo_error_dialog_title">Failed Identity Retrieval</string>
    <string name="identity_demo_error_message_failed_get_identity">Could not retrieve the user identity:\u0020</string>
    <string name="feature_nosql_database_title">NoSQL Database</string>
    <string name="feature_nosql_database_subtitle">Store data in the cloud.</string>
    <string name="feature_nosql_database_overview">Store data in the cloud.</string>
    <string name="feature_nosql_database_description">The Sample App demonstrates how to access your configured Amazon DynamoDB NoSQL database tables. Select your table, insert sample data, and perform queries by choosing from a list of examples. Hold down an item in query results to update or delete the item. When you\'re done with the demo, you can remove the sample data from your table.</string>
    <string name="feature_nosql_database_powered_by">Powered by Amazon DynamoDB</string>
    <string name="main_fragment_title_nosql_database">NoSQL Database</string>
    <string name="feature_nosql_database_demo_button">Demo NoSQL Database</string>
    <string name="main_fragment_title_nosql_select_operation">NoSQL Demo: %s</string>
    <string name="main_fragment_title_nosql_select_table">NoSQL Demo: Select Table</string>
    <string name="nosql_select_table_item_partition_key_text">Partition Key</string>
    <string name="nosql_select_table_item_sort_key_text">Sort Key</string>
    <string name="nosql_select_table_index_count_text">Indexes</string>
    <string name="nosql_dialog_title_failed_dynamodb_describe_table_text">Failed retrieving schema for table \'%s\'.</string>
    <string name="nosql_dialog_title_failed_operation_text">Operation Failed</string>
    <string name="nosql_dialog_title_failed_loading_more_results">Failed Loading More Results</string>
    <string name="nosql_dialog_title_failed_update_item_text">Update Item Failed</string>
    <string name="nosql_dialog_title_failed_delete_item_text">Delete Item Failed</string>
    <string name="nosql_database_table_item_creation_date_text">Created %s</string>
    <string name="nosql_insert_sample_data_button_text">INSERT SAMPLE DATA</string>
    <string name="nosql_remove_sample_data_button_text">REMOVE SAMPLE DATA</string>
    <string name="nosql_dialog_title_remove_confirmation">Confirm Removal of Sample Items</string>
    <string name="nosql_dialog_message_remove_confirmation">This will remove all your sample items.  Are you sure?</string>
    <string name="nosql_dialog_title_added_sample_data_text">Added Sample Data</string>
    <string name="nosql_dialog_message_added_sample_data_text">20 Sample Items with random data were added to your table.</string>
    <string name="nosql_dialog_title_removed_sample_data_text">Removed Sample Data</string>
    <string name="nosql_dialog_message_removed_sample_data_text">All Sample Items have been removed from your table.</string>
    <string name="nosql_dialog_ok_text">OK</string>
    <string name="nosql_operation_header_get">Get</string>
    <string name="nosql_operation_header_primary_queries">Primary Index Queries</string>
    <string name="nosql_operation_header_secondary_queries">Secondary Index Queries (%s)</string>
    <string name="nosql_operation_header_scan">Scan</string>
    <string name="nosql_operation_get_by_partition_text">Get Item</string>
    <string name="nosql_operation_example_get_by_partition_text">Find Item with %1$s = \'%2$s\'.</string>
    <string name="nosql_operation_get_by_partition_and_sort_text">Get Item</string>
    <string name="nosql_operation_example_get_by_partition_and_sort_text">Find Item with %1$s = \'%2$s\' and %3$s = \'%4$s\'.</string>
    <string name="nosql_operation_title_query_by_partition_and_sort_condition_text">Query by Partition Key and Sort Condition</string>
    <string name="nosql_operation_example_query_by_partition_and_sort_condition_text">Find all items with %1$s = \'%2$s\' and %3$s &lt; \'%4$s\'.</string>
    <string name="nosql_operation_title_query_by_partition_text">Query by Partition Key</string>
    <string name="nosql_operation_example_query_by_partition_text">Find all items with %1$s = \'%2$s\'.</string>
    <string name="nosql_operation_title_query_by_partition_and_filter_text">Query by Partition Key and Filter</string>
    <string name="nosql_operation_example_query_by_partition_and_filter_text">Find all items with %1$s = \'%2$s\' and %3$s &gt; \'%4$s\'.</string>
    <string name="nosql_operation_title_query_by_partition_sort_condition_and_filter_text">Query by Partition Key, Sort Condition, and Filter</string>
    <string name="nosql_operation_example_query_by_partition_sort_condition_and_filter_text">Find all items with %1$s = \'%2$s\', %3$s &lt; \'%4$s\', and %5$s &gt; \'%6$s\'.</string>
    <string name="nosql_operation_title_index_query_by_partition_and_sort_condition_text">Query by Partition Key and Sort Condition</string>
    <string name="nosql_operation_example_index_query_by_partition_and_sort_condition_text">Find all items with %1$s = \'%2$s\' and %3$s &gt; \'%4$s\'.</string>
    <string name="nosql_operation_title_index_query_by_partition_text">Query by Partition Key</string>
    <string name="nosql_operation_example_index_query_by_partition_text">Find all items with %1$s = \'%2$s\'.</string>
    <string name="nosql_operation_title_index_query_by_partition_and_filter_text">Query by Partition Key and Filter</string>
    <string name="nosql_operation_example_index_query_by_partition_and_filter_text">Find all items with %1$s = \'%2$s\' and %3$s &gt; \'%4$s\'.</string>
    <string name="nosql_operation_title_index_query_by_partition_sort_condition_and_filter_text">Query by Partition Key, Sort Condition, and Filter</string>
    <string name="nosql_operation_example_index_query_by_partition_sort_condition_and_filter_text">Find all items with %1$s = \'%2$s\', %3$s &lt; \'%4$s\', and %5$s &gt; \'%6$s\'.</string>
    <string name="nosql_operation_title_scan_with_filter">Scan with Filter</string>
    <string name="nosql_operation_example_scan_with_filter">Find all items with \'%1$s\' &gt; \'%2$s\'.</string>
    <string name="nosql_operation_example_scan_with_filter_on_partition_and_sort">Find all items with \'%1$s\' beginning with \'%2$s\' and \'%3$s\' beginning with \'%4$s\'.</string>
    <string name="nosql_operation_example_scan_with_filter_on_partition">Find all items with \'%1$s\' beginning with \'%2$s\'</string>
    <string name="nosql_operation_title_scan_without_filter">Scan</string>
    <string name="nosql_operation_example_scan_without_filter">Show all items in the table.</string>
    <string name="nosql_dialog_title_pending_results_text">Please wait&#8230;</string>
    <string name="nosql_dialog_message_pending_results_text">Waiting for the response to load the results.</string>
    <string name="nosql_dialog_title_scan_warning_text">WARNING: Scan is Expensive</string>
    <string name="nosql_dialog_message_scan_warning_text">This operation scans the entire table and should not generally be used in a production app.</string>
    <string name="nosql_dialog_title_no_results_text">No Matching Items Found</string>
    <string name="nosql_dialog_message_no_results_text">No items match your criteria. Insert more sample data and try again.</string>
    <string name="nosql_context_menu_title_for_results_text">Update or Delete Item</string>
    <string name="nosql_context_menu_entry_update_item_text">Update Item</string>
    <string name="nosql_context_menu_entry_delete_item_text">Delete Item</string>
    <string name="nosql_dialog_title_confirm_update_item_text">Confirm Update</string>
    <string name="nosql_dialog_message_confirm_update_item_text">Are you sure you want to update the selected item?</string>
    <string name="nosql_dialog_title_confirm_delete_item_text">Confirm Delete</string>
    <string name="nosql_dialog_message_confirm_delete_item_text">Are you sure you want to delete the selected item?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_activity_prova">ActivityProva</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_recipe">ActivityRecipe</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>