<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_item_home"
            android:icon="@drawable/ic_home"
            android:title="@string/drawer_item_home" />
        <item
            android:id="@+id/drawer_item_categories"
            android:icon="@drawable/ic_action_restaurant"
            android:title="@string/drawer_item_categories" />
        <item
            android:id="@+id/drawer_item_how_to"
            android:icon="@drawable/ic_help"
            android:title="@string/drawer_item_how_to"/>
        <item
            android:id="@+id/drawer_item_shopping_list"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/drawer_item_shopping_list"/>
        <item
            android:id="@+id/drawer_item_favourite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/drawer_item_favourite"/>
    </group>
</menu>